# teqpflsh

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Doxyfile  README.md  pyproject.toml
.github/workflows/: build_cibuildwheel.yml  build_docs.yaml
doc/: .gitignore  Doxyfile  README.md  environment.yml
doc/source/: autodoc.py  conf.py  index.rst  sphinx_post_run.py  sphinx_pre_run.py
doc/source/KDtree/: KDtreefundamentals.ipynb  index.rst
doc/source/background/: Background.ipynb  Outlook.ipynb
doc/source/polygons/: index.rst  polygonoperations.ipynb  polygonvalidity.ipynb
doc/source/regionedflasher/: MainFlasher.ipynb  RegionedFlasher.ipynb
doc/source/superancillary/: SuperancillaryIterations.ipynb  SuperancillaryWater.ipynb  index.rst  superancillaryJSON.tar.xz
include/: nanobind_json.hpp
include/kdthermo/: flasher.hpp  kdtree.hpp  polyquadtree.hpp  quadtree.hpp
include/teqpflsh/: flasher.hpp  polygon.hpp  polymath.hpp  polyquadtree.hpp  quadtree.cxx  stepping.hpp  superancillary.hpp
include/teqpflsh/properties/: interfaces.hpp  properties.hpp
include/teqpflsh/superancillary/: superancillary.hpp
include/teqpflsh/trees/kdtree/: kdtree.hpp
include/teqpflsh/trees/quadtree/: quadtree.hpp
interface/: nanobind_interface.cpp
notebooks/: HS complications.ipynb  K-D distance basics.ipynb  K-D tree distance metrics.ipynb  L2Tree profiling.ipynb  Polygon sampling and triangulation.ipynb  SSATV.ipynb  Superancillary Water.ipynb  chebthings.ipynb  polygon operations.ipynb  teqpflsh_Cheb.py
notebooks/superancillaryJSON/: README.md
src/: geos_bench.cpp  geos_test.cpp  quadtree.cpp  quadtree_orig.cpp
src/teqpflsh/: __init__.py
src/tests/: main.cxx  superancillary.cxx
