[build-system]
requires = ["scikit-build-core >=0.9.0", "nanobind >=1.3.2", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "teqpflsh"
version = "0.0.4dev"
description = "Flash calculations with guesses powered by K-D trees"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ian Bell", email = "ian.bell@nist.gov" },
]
# classifiers = [
#     "License :: BSD",
# ]

[project.urls]
Homepage = "https://github.com/usnistgov/teqpflsh"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
#wheel.py-api = "cp312"

build.verbose = true
logging.level = "INFO"

#cmake.verbose = true
#cmake.build-type = "Debug"
#cmake.args = ["-G Xcode", "-DXCODE_DEBUG_PYTHON=ON"]
#cmake.args = ["-DVERBOSE=ON"]

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-T", "ClangCL"]